--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+
+/*
+  Everything else is intentionally left for you to design:
+  - layout
+  - hierarchy
+  - spacing
+  - emphasis
+  - visual grouping
+*/
+
 /* =========================
    Base styles (minimal) -- Feel free to change these to match your style!
    ========================= */
@@ -47,10 +57,52 @@ section {
 /* =========================
    Typography (intentionally plain)
    ========================= */
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+  text-decoration: none;
+  color: #626237;
+  margin: 0%;
+}
 
-h1,
-h2 {
-  line-height: 1.25;
+h3 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800;
+  font-size: 25px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4D4D4D;
+  margin: 0%;
+}
+
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+  color: #626237;
+  margin: 0%;
+
+}
+
+/* WORKSHOP PRICE */
+.price {
+  color: #B15912;
+  margin-bottom: 3%;
+  margin-top:0%;
+}
+
+/* FOOTER HEADINGS */
+.footer_h4 {
+  font-size: 17px;
+  color: #ffffff;
+  font-weight: 300;
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  color: #4D4D4D;
+  margin-top: .5%;
 }
 
 ul {
@@ -69,32 +121,54 @@ label {
   display: block;
   font-weight: 600;
   margin-bottom: 0.25rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  color: #4D4D4D;
+  text-transform: uppercase;
 }
+/* REGISTRATION FORM */
+input[type="text"] {
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  color: #4d4d4d51;
 
-input,
-button {
-  font: inherit;
-}
-
-input {
-  width: 100%;
-  padding: 0.4rem;
+  border-color: #4D4D4D;
+  border-width: 1.5px;
+  border-style: solid;
+  border-radius: 5px;
+  
+  padding: .75rem 1rem;
   margin-bottom: 1rem;
+  width: 65%;
 }
 
+.spacing {
+  margin-bottom: 3%;
+}
+
+.register_button {
+  padding: 1rem 3rem;
+  margin-bottom: 5%;
+}
+/* BUTTON */
 button {
-  padding: 0.6rem 1rem;
+  padding: 1rem 5rem;
   cursor: pointer;
+  display: flex;
+  text-align: center;
+  background-color: #B15912;
+  color: #fff;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  border: none;
 }
-
-/*
-  Everything else is intentionally left for you to design:
-  - layout
-  - hierarchy
-  - spacing
-  - emphasis
-  - visual grouping
-*/
+.please_center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
 /* BODY FORMATTING */
 .full_window {
@@ -129,12 +203,12 @@ header {
   align-items: left;
 }
 
-nav {
+.main_nav {
   display: flex;
   align-content: right;
 }
 
-nav ul {
+.main_nav ul {
   display: flex;
   list-style: none;
   gap: 20px;
@@ -142,7 +216,7 @@ nav ul {
   padding: 10px
 }
 
-nav a {
+.main_nav a {
   font-family: 'Poppins', sans-serif;
   text-decoration: none;
   color: white;
@@ -162,28 +236,30 @@ nav a {
 }
 
 .date {
-  font-family: 'Poppins', sans-serif;
-  font-size: 25px;
-  text-transform: uppercase;
-  color: #4D4D4D;
   margin: 0%;
 }
 
-.price {
-  font-family: 'Poppins', sans-serif;
-  font-size: 25px;
-  text-transform: uppercase;
-  color: #B15912;
-  margin-bottom: 3%;
-  margin-top:0%;
-}
-
+/* ICONS */
 .icon {
   width: 25px;
   height: auto;
   position: relative;
   top: 0px; 
 }
+
+.phone_icon {
+    position: relative;
+    top: 5px;
+    width: 20px;
+    margin-right: 5px;
+  }
+
+.mail_icon {
+    position: relative;
+    top: 2px;
+    width: 20px;
+    margin-right: 5px;
+  }
 
 .description {
   font-family: 'Poppins', sans-serif;
@@ -201,20 +277,6 @@ nav a {
   margin-top:0%;
 }
 
-/* BUTTON */
-button {
-padding-left: 55px;
-padding-right: 55px;
-padding-top: 15px;
-padding-bottom: 15px;
-display: flex;
-background-color: #B15912;
-color: #fff;
-border-radius: 10px;
-font-family: 'Poppins', sans-serif;
-font-size: 17px;
-}
-
 .crop_box {
   width: 533px;
   height: 714px;
@@ -230,7 +292,32 @@ font-size: 17px;
   top: 0;
 }
 
+
+/* FOOTER */
 footer {
   width: 100%;
-  
+  background-color: #B9BAB3;
 }
+
+.footer_box {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: start;
+  gap: 10px;
+  padding: 40px;
+}
+
+.copyright {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.foot_nav ul {
+  list-style: none;
+  gap: 20px;
+  margin: 0;
+  padding: 10px
+}
+
+
