- Updated CSS - added "who is this for" - updated the read me

--- a/style.css
+++ b/style.css
@@ -188,6 +188,14 @@ button {
   justify-content: center;
 }
 
+.who_its_for {
+  margin-top: 0;
+}
+
+.who_its_for p {
+  margin: 0;
+}
+
 /* HEADER */
 header {
  display: flex;
@@ -278,7 +286,7 @@ header {
 }
 
 .crop_box {
-  width: 533px;
+  width: 366px;
   height: 714px;
   overflow: hidden;
   position: relative;
@@ -296,7 +304,7 @@ header {
 /* FOOTER */
 footer {
   width: 100%;
-  background-color: #B9BAB3;
+  background-color: #626237;
 }
 
 .footer_box {
@@ -311,13 +319,15 @@ footer {
   display: flex;
   justify-content: left;
   align-items: left;
+  color: white;
 }
 
 .foot_nav ul {
   list-style: none;
   gap: 20px;
   margin: 0;
-  padding: 10px
+  padding: 10px;
+  color: white;
 }
 
 
